// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin assignments 1`] = `
"module.exports = function (_scope, {}) {
            let x;
            _scope.x++;
            _scope.x = 1;
            return _scope;
};"
`;

exports[`plugin declarations 1`] = `
"module.exports = function (_scope, {}) {
            let noInitValue;
            for (var forVar = _scope.forVar = 0; _scope.forVar != 0; _scope.forVar++);
            let singleInit = _scope.singleInit = 1;
            let doubleInit1 = _scope.doubleInit1 = 1,
                doubleInit2 = _scope.doubleInit2 = 2;
            var sameDoubleInit = 1,
                sameDoubleInit = _scope.sameDoubleInit = 2;
            //class className { fn() { const i = 0 } }
            //function functionName () { function i() {} }

            return _scope;
};"
`;

exports[`plugin export 1`] = `
"module.exports = function (_scope, {}) {
            let defaultExport, toBeNameExport1, toBeNameExport2;
            _scope.default = _scope.defaultExport;
            const namedSingleExport = _scope.namedSingleExport = 'namedSingleExportValue';
            return _scope;
};"
`;

exports[`plugin globals 1`] = `
"module.exports = function (_scope, {
            global2,
            global1,
            global3,
            nestedGlobal
}) {
            let x = _scope.x = global1;
            global2 = 1;
            global3();
            !function () {
                        return nestedGlobal;
            }();
            return _scope;
};"
`;

exports[`plugin import 1`] = `
"module.exports = function (_scope, {}) {

            [_scope.defaultImport, _scope.singleNamedImport, _scope.namedImport1, _scope.namedImport2, _scope.localImportName, _scope.namespaceImport];
            return _scope;
};"
`;

exports[`plugin references 1`] = `
"module.exports = function (_scope, {}) {
            let x;
            (0, _scope.x)();
            !function () {
                        _scope.x++;
            };
            () => {
                        return { x: _scope.x };
            };
            return _scope;
};"
`;

exports[`plugin scopes 1`] = `
"module.exports = function (_scope, {}) {
            let x = _scope.x = true;
            for (let x = 0; x != 0; x++);
            {
                        let x = false;
            }
            !function () {
                        var x = false;
            };
            return _scope;
};"
`;
